Add script for creating cards based on fetched data

--- a/index.html
+++ b/index.html
@@ -10,16 +10,6 @@
   <title>Time tracking dashboard</title>
 </head>
 <body>
-  <div class="card">
-    <img class="card__icon" src="./images/icon-work.svg" alt="">
-    <div class="card__content">
-      <p class="card__title">Work</p>
-      <a class="card__more" href="/" aria-label="More on work">
-        <img src="./images/icon-ellipsis.svg" alt="">
-      </a>
-      <span class="card__hours">32hrs</span>
-      <span class="card__previous">Last Week - 36hrs</span>
-    </div>
-  </div>
+  <script type="module" src="./index.js"></script>
 </body>
 </html>
